# EviCore

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_evaluate_file.json  demo_evaluate_one.json  demo_extract_experience.json  demo_input.json  demo_kg_pipeline.json
src/cybereye4_wrapper/: __init__.py  api.py  capabilities.py  cli.py  config.py  engine.py
src/cybereye4_wrapper/adapters/: __init__.py  evaluation_adapter.py  experience_adapter.py  experience_ops_adapter.py  kg_adapter.py  kg_pipeline_adapter.py  planner_adapter.py  project_loader.py
src/cybereye4_wrapper/schemas/: capabilities.py  request.py  response.py
tests/: test_engine_helpers.py
